Fix top nav alignment

--- a/assets/main.css
+++ b/assets/main.css
@@ -82,6 +82,7 @@ nav>ul {
     gap: 0.5em;
     flex-direction: row;
     justify-content: center;
+    padding: 0;
 }
 
 nav>ul img {
